--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -77,8 +77,12 @@
     <script src="/js/dependencies/angular/angular.min.js"></script>
     <script src="/js/dependencies/bootstrap/bootstrap.min.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/crud.js"></script>
     <script src="/js/crud/crud.js"></script>
+    <script src="/js/home.js"></script>
     <script src="/js/home/home.js"></script>
+    <script src="/js/modules/crud.js"></script>
+    <script src="/js/modules/home.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
