--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/custom.css">
-    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/min/production.min.css">
     <!--STYLES END-->
   </head>
 
@@ -68,21 +66,7 @@
         <!-- /.row -->
     </footer>
     <!--SCRIPTS-->
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/dependencies/jquery/jquery.min.js"></script>
-    <script src="/js/dependencies/angular-loader/angular-loader.min.js"></script>
-    <script src="/js/dependencies/angular-mocks/angular-mocks.js"></script>
-    <script src="/js/dependencies/angular-resource/angular-resource.min.js"></script>
-    <script src="/js/dependencies/angular-route/angular-route.min.js"></script>
-    <script src="/js/dependencies/angular/angular.min.js"></script>
-    <script src="/js/dependencies/bootstrap/bootstrap.min.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/crud.js"></script>
-    <script src="/js/crud/crud.js"></script>
-    <script src="/js/home.js"></script>
-    <script src="/js/home/home.js"></script>
-    <script src="/js/modules/crud.js"></script>
-    <script src="/js/modules/home.js"></script>
+    <script src="/min/production.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
