--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -43,7 +43,7 @@
         <!-- /.container -->
     </nav>
     
-    <div class="mt-50 p-tb-50" ng-view=""></div>
+    <div class="mt-50 p-tb-50" ui-view=""></div>
     
     <footer class="plr-20">
         <div class="row">
@@ -70,11 +70,12 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/jquery/jquery.min.js"></script>
+    <script src="/js/dependencies/angular/angular.min.js"></script>
     <script src="/js/dependencies/angular-loader/angular-loader.min.js"></script>
     <script src="/js/dependencies/angular-mocks/angular-mocks.js"></script>
     <script src="/js/dependencies/angular-resource/angular-resource.min.js"></script>
     <script src="/js/dependencies/angular-route/angular-route.min.js"></script>
-    <script src="/js/dependencies/angular/angular.min.js"></script>
+    <script src="/js/dependencies/angular-ui-router.js"></script>
     <script src="/js/dependencies/bootstrap/bootstrap.min.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/modules/crud.js"></script>
