--- a/assets/templates/crud/create.html
+++ b/assets/templates/crud/create.html
@@ -1,10 +1,10 @@
 <div class="container">
 	<h1>New entry</h1>
-	<form name="CreateForm" ng-submit="createEntry()">
+	<form name="CreateForm" class="form-group jumbotron" ng-submit="createEntry()">
 		<label for="title">Title</label>
-		<input type="text" name="title" id="title" ng-model="createData.title">
+		<input type="text" class="form-control" name="title" id="title" ng-model="createData.title" placeholder="Title">
 		<label for="text">Text</label>
-		<input type="text" name="text" id="text" ng-model="createData.text">
-		<button>Create</button>
+		<input type="text" class="form-control" name="text" id="text" ng-model="createData.text" placeholder="Text">
+		<button class="btn btn-primary">Create</button>
 	</form>
 </div>
