--- a/assets/templates/crud/update.html
+++ b/assets/templates/crud/update.html
@@ -1,10 +1,10 @@
 <div class="container">
 	<h1>Update entry</h1>
-	<form name="CreateForm" ng-submit="updateEntry()">
+	<form name="CreateForm" class="form-group jumbotron" ng-submit="updateEntry()">
 		<label for="title">Title</label>
-		<input type="text" name="title" id="title" ng-model="updateData.title">
+		<input type="text" class="form-control" name="title" id="title" ng-model="updateData.title" placeholder="Title">
 		<label for="text">Text</label>
-		<input type="text" name="text" id="text" ng-model="updateData.text">
+		<input type="text" class="form-control" name="text" id="text" ng-model="updateData.text" placeholder="Text">
 		<button>Update</button>
 	</form>
 </div>
