--- a/assets/templates/home/home.html
+++ b/assets/templates/home/home.html
@@ -3,7 +3,7 @@
         <h1>Hello!!</h1>
         <p>This is a SailsJs, AngularJs and Twitter Bootstrap example, feel free to use it in your proyects.</p>
         <p>Start using the built in simple CRUD</p>
-        <p><a ng-href="/#/crud" class="btn btn-primary btn-large pull-right">Simple CRUD</a>
+        <p><a ui-sref="crud" class="btn btn-primary btn-large pull-right">Simple CRUD</a>
         </p>
     </header>
 
