--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,10 +31,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a ng-href="/#/">Home</a>
+                        <a ui-sref="home">Home</a>
                     </li>
                     <li>
-                        <a ng-href="/#/crud">CRUD</a>
+                        <a ui-sref="crud">CRUD</a>
                     </li>
                 </ul>
             </div>
