Configured live reload

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,6 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/custom.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
@@ -67,6 +66,8 @@
         </div>
         <!-- /.row -->
     </footer>
+
+    <script src="http://localhost:35729/livereload.js"></script>
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/jquery/jquery.min.js"></script>
