--- a/assets/templates/crud/create.html
+++ b/assets/templates/crud/create.html
@@ -6,5 +6,6 @@
 		<label for="text">Text</label>
 		<input type="text" class="form-control" name="text" id="text" ng-model="createData.text" placeholder="Text">
 		<button class="btn btn-primary">Create</button>
+		<p class="error" ng-if="error">Fill both spaces!</p>
 	</form>
 </div>
